Fix styling on forms, fix styling on mobile nav

--- a/styles/sass/_contactPageMediaQuery.scss
+++ b/styles/sass/_contactPageMediaQuery.scss
@@ -39,6 +39,12 @@
   }
 }
 
+@media (max-width: 800px) {
+  .formContainer {
+    margin-top: -40px;
+  }
+}
+
 @media (max-width: 769px) {
   #contact h2 {
     margin-top: 70px;
@@ -59,6 +65,7 @@
     font-size: 3rem;
     padding-left: 0px;
     background-color: #fafafab0;
+    margin: 140px auto;
   }
   .nameEmailContainer {
     flex-direction: column;
@@ -72,7 +79,7 @@
     margin-top: 20px;
   }
   .formContainer {
-    padding-left: 0px;
+    padding-left: 30px;
   }
 
   #contact h4 {
@@ -82,7 +89,9 @@
 
 @media (max-width: 378px) {
   .formContainer {
-  margin-top: -100px;
+    padding: 10px;
+    border-left: 10px solid yellow;
+    border-bottom: 10px solid yellow;
   }
   #contact h2 {
     width: 100%;
