--- a/styles/sass/_mediaQuery.scss
+++ b/styles/sass/_mediaQuery.scss
@@ -145,7 +145,7 @@
   }
 
   .hamburgerMenu.active .bar:nth-child(3) {
-    transform: translatex(-8px) translatey(0px) rotate(-130deg);
+    transform: translatex(-9px) translatey(0px) rotate(-130deg);
   }
   .hamburgerMenu.active .bar:nth-child(2) {
     transform: translatey(50px) rotate(180deg);
@@ -155,34 +155,33 @@
   }
 
   .hamburgerMenu.active .bar:nth-child(1) {
-    transform: translatex(-8px) translatey(24px) rotate(130deg);
+    transform: translatex(-9px) translatey(20px) rotate(130deg);
   }
   .navMenu {
     visibility: hidden;
     top: 100px;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-content: center;
     background-color: white;
     border: black 5px solid;
     border-right: none;
-    height: 30%;
     transform: translateX(100%);
     transition: 0.2s ease-in all;
-    overflow-x: hidden;
-    padding: 20%;
+    padding: 100px;
+    width: 100px;
   }
 
   .navMenu li {
     align-self: center;
-    padding: 5% 0px;
   }
 
   .navMenu.active {
     visibility: visible;
     background-color: rgba(255, 255, 0, 0.96);
     z-index: 3;
-    width: 10%;
+    width: 100px;
+    height: 50%;
     transform: translateX(0%);
   }
 }
