--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,12 @@ body {
   margin: 0;
 }
 
-article, aside, footer, header, nav, section {
+article,
+aside,
+footer,
+header,
+nav,
+section {
   display: block;
 }
 
@@ -18,7 +23,9 @@ h1 {
   margin: 0.67em 0;
 }
 
-figcaption, figure, main {
+figcaption,
+figure,
+main {
   display: block;
 }
 
@@ -50,15 +57,19 @@ abbr[title] {
           text-decoration: underline dotted;
 }
 
-b, strong {
+b,
+strong {
   font-weight: inherit;
 }
 
-b, strong {
+b,
+strong {
   font-weight: bolder;
 }
 
-code, kbd, samp {
+code,
+kbd,
+samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
@@ -76,7 +87,8 @@ small {
   font-size: 80%;
 }
 
-sub, sup {
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -91,7 +103,8 @@ sup {
   top: -0.5em;
 }
 
-audio, video {
+audio,
+video {
   display: inline-block;
 }
 
@@ -108,31 +121,46 @@ svg:not(:root) {
   overflow: hidden;
 }
 
-button, input, optgroup, select, textarea {
+button,
+input,
+optgroup,
+select,
+textarea {
   font-family: sans-serif;
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
 }
 
-button, input {
+button,
+input {
   overflow: visible;
 }
 
-button, select {
+button,
+select {
   text-transform: none;
 }
 
-button, html [type=button], [type=reset], [type=submit] {
+button,
+html [type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
 }
 
-button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner {
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
 
-button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring {
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -159,13 +187,15 @@ textarea {
   overflow: auto;
 }
 
-[type=checkbox], [type=radio] {
+[type=checkbox],
+[type=radio] {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 0;
 }
 
-[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -174,7 +204,8 @@ textarea {
   outline-offset: -2px;
 }
 
-[type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration {
+[type=search]::-webkit-search-cancel-button,
+[type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -183,7 +214,8 @@ textarea {
   font: inherit;
 }
 
-details, menu {
+details,
+menu {
   display: block;
 }
 
@@ -201,6 +233,41 @@ template {
 
 [hidden] {
   display: none;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: "";
+  clear: both;
+  height: 0;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 body {
@@ -898,19 +965,31 @@ aside img {
   top: 100%;
 }
 
+input,
+textarea,
+text {
+  background-color: transparent;
+}
+
 textarea {
   resize: none;
   border-style: none;
   border-color: #4ceea7;
-  border: #4cee4c solid 1px;
+  border: #4cee4c solid 2px;
   width: 100%;
+  padding: 20px;
 }
 
 input,
 text {
   border-style: none;
-  border-bottom: #4cee4c solid 1px;
+  border-bottom: #4cee4c solid 2px;
   margin-top: 10px;
+}
+
+input {
+  padding-bottom: 20px;
+  padding-left: 30px;
 }
 
 .name,
@@ -1106,8 +1185,8 @@ text {
     transition: 0.2s ease-in-out all;
   }
   .hamburgerMenu.active .bar:nth-child(3) {
-    -webkit-transform: translatex(-8px) translatey(0px) rotate(-130deg);
-            transform: translatex(-8px) translatey(0px) rotate(-130deg);
+    -webkit-transform: translatex(-9px) translatey(0px) rotate(-130deg);
+            transform: translatex(-9px) translatey(0px) rotate(-130deg);
   }
   .hamburgerMenu.active .bar:nth-child(2) {
     -webkit-transform: translatey(50px) rotate(180deg);
@@ -1117,8 +1196,8 @@ text {
     background-color: black;
   }
   .hamburgerMenu.active .bar:nth-child(1) {
-    -webkit-transform: translatex(-8px) translatey(24px) rotate(130deg);
-            transform: translatex(-8px) translatey(24px) rotate(130deg);
+    -webkit-transform: translatex(-9px) translatey(20px) rotate(130deg);
+            transform: translatex(-9px) translatey(20px) rotate(130deg);
   }
   .navMenu {
     visibility: hidden;
@@ -1127,32 +1206,31 @@ text {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     -ms-flex-line-pack: center;
         align-content: center;
     background-color: white;
     border: black 5px solid;
     border-right: none;
-    height: 30%;
     -webkit-transform: translateX(100%);
             transform: translateX(100%);
     -webkit-transition: 0.2s ease-in all;
     transition: 0.2s ease-in all;
-    overflow-x: hidden;
-    padding: 20%;
+    padding: 100px;
+    width: 100px;
   }
   .navMenu li {
     -ms-flex-item-align: center;
         align-self: center;
-    padding: 5% 0px;
   }
   .navMenu.active {
     visibility: visible;
     background-color: rgba(255, 255, 0, 0.96);
     z-index: 3;
-    width: 10%;
+    width: 100px;
+    height: 50%;
     -webkit-transform: translateX(0%);
             transform: translateX(0%);
   }
@@ -1297,6 +1375,11 @@ text {
     margin: 50px auto;
   }
 }
+@media (max-width: 800px) {
+  .formContainer {
+    margin-top: -40px;
+  }
+}
 @media (max-width: 769px) {
   #contact h2 {
     margin-top: 70px;
@@ -1315,6 +1398,7 @@ text {
     font-size: 3rem;
     padding-left: 0px;
     background-color: rgba(250, 250, 250, 0.6901960784);
+    margin: 140px auto;
   }
   .nameEmailContainer {
     -webkit-box-orient: vertical;
@@ -1331,7 +1415,7 @@ text {
     margin-top: 20px;
   }
   .formContainer {
-    padding-left: 0px;
+    padding-left: 30px;
   }
   #contact h4 {
     font-size: 1.3rem;
@@ -1339,7 +1423,9 @@ text {
 }
 @media (max-width: 378px) {
   .formContainer {
-    margin-top: -100px;
+    padding: 10px;
+    border-left: 10px solid yellow;
+    border-bottom: 10px solid yellow;
   }
   #contact h2 {
     width: 100%;
